docs: documentation route delete sales id
add all documentation with swagger about route delete sale that delete a sale by its id
